css/globalstyle.css
@import url('https://fonts.googleapis.com/css?family=Luckiest+Guy');
* {
	color: #87CEEB;
	font-family: 'Luckiest Guy';
	text-shadow: 0.1em 0.1em #000000;
}

html,
body {
	width: 100%;
	height: 100%;
	margin: 0px;
	background-color: #00003f;
}

a {
	color: #87CEEB;
	text-decoration: none;
}

#header {
	position: fixed;
	width: 100%;
	top: 0;
	left: 0;
	display: block;
	text-align: center;
	font-size: 25px;
	height: 30px;
	border-bottom: 3px black solid;
	background-color: #000069;
}

#header > div > a {
	padding-left: 10px;
	padding-right: 10px;
	text-shadow: 0.1em 0.1em #000000;
}

#header > .home-button {
	display: inline-block;
	float: left;
}

#header > .site-text {
	display: inline-block;
	text-align: center;
	text-shadow: 0.1em 0.1em #000000;
}

#header > .back-button {
	display: inline-block;
	float: right;
}

.content {
	padding-top: 50px;
	padding-bottom: 50px;
	margin-top: 0px;
}

#footer {
	position: fixed;
	margin-top: auto;
	text-shadow: 0.1em 0.1em #000000;
	display: block;
	height: 20px;
	left: 0;
	bottom: 0;
	width: 100%;
	color: #87CEEB;
	text-align: center;
	border-top: 3px black solid;
	font-size: 15px;
	background-color: #000069;
}

.footer-element {
	display: inline-block;
	padding-left: 1vw;
	padding-right: 1vw;
	float: left;
}

.footer-element > a {
	text-shadow: 0.1em 0.1em #000000;
}

#copyright-link {
	display: inline-block;
	text-align: right;
	float: right;
}

